<resources>
    <string name="app_name">TicTacParty</string>
    <string name="play_now_text">Play now</string>
    <string name="match_history_text">Match history</string>
    <string name="challenge_text">Challenge a friend</string>
    <string name="app_name_title">Tic Tac Party</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="create_your_account">Create your account</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Email">Email (for password recovery only)</string>
    <string name="create">Create</string>
    <string name="choose_avatar">Choose your avatar</string>
</resources>